<resources>
    <string name="app_name">BankTest</string>
    <string name="placeholder_name">Name</string>
    <string name="placeholder_company">Company</string>
    <string name="placeholder_company_name">company_name</string>
    <string name="placeholder_company_catchphrase">company_catchphrase</string>
    <string name="placeholder_company_bs">company_bs</string>
    <string name="placeholder_username">username</string>
    <string name="placeholder_address">address</string>
    <string name="placeholder_email">email</string>
    <string name="placeholder_phone">phone</string>
    <string name="placeholder_web">web</string>
    <string name="placeholder_description">description</string>
</resources>